# Swarminho

./: .gitignore  README.md  install.sh  pyproject.toml
base_rootfs/sbin/: apk
results/: burst_20251211T182224Z.json  burst_20251211T184334Z.json  cpu_bound_2025-12-11_22-16-48.json  cpu_bound_2025-12-11_22-33-42.json  cpu_bound_2025-12-11_22-39-10.json  cpu_bound_2025-12-11_22-58-35.json  cpu_bound_2025-12-12_00-38-20.json  many_small_2025-12-11_22-38-40.json  many_small_2025-12-11_22-58-11.json  mem_pressure_2025-12-11_22-58-25.json  mem_pressure_2025-12-11_23-39-43.json  mem_pressure_2025-12-11_23-43-45.json  mem_pressure_2025-12-11_23-53-49.json  minimal_2025-12-11_21-58-58.json  minimal_2025-12-11_22-38-01.json  minimal_2025-12-11_22-58-01.json  ramp_20251211T182145Z.json  ramp_20251211T184255Z.json  until_reject_20251211T182255Z.json  until_reject_20251211T184405Z.json
src/graphics/: graphics.py
src/swarminho/: axaloti.py  cli.py  containerstatus.py  experiments.py  filesystem.py  metrics.py  orchestrator.py  runtime.py
src/swarminho/experiments/: __init__.py  __main__.py  core.py  scenarios.py
